<resources>
    <string name="app_name">NavigationComponent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstfragment">FirstFragment</string>
    <string name="secondfragmentmenu">secondFragmentMenu</string>
    <string name="settings">Settings</string>
    <string name="wealth">Wealth</string>
    <string name="home">Home</string>
    <string name="portfolio">Portfolio</string>
    <string name="rewards">Rewards</string>
    <string name="market">Market</string>
    <string name="profile">Profile</string>
    <string name="welcome_card_desc">Make you first Investment today</string>
    <string name="welcome_user">Welcome Nuri,</string>
    <string name="invest_today">Invest Today</string>
</resources>